log
Fri 17 Mar 2023 05:43:48 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
01cf253
Fri 17 Mar 2023 05:46:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
326d30b
Fri 17 Mar 2023 05:49:37 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2d64fbc
Fri 17 Mar 2023 05:54:30 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:96:5: error: ‘Vector’ has no member named ‘pos’
   96 |   v -> pos[i] = valor;
      |     ^~
Compilation failed
06b6b68
Fri 17 Mar 2023 05:55:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9748f1d
Fri 17 Mar 2023 05:59:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
8d3e22d
